[package]
name = "atomic-env-rs"
version = "0.0.1"
edition = "2021"
description = "Atomic Execution Enviornment"
authors = ["Parsa Ghadimi <i@parsa.ooo>"]
license = "MIT"
# readme = "README.md"
repository = "https://github.com/qti3e/atomic-env-rs"
documentation = "https://docs.rs/atomic-env-rs"
categories = ["rust-patterns", "visualization"]
keywords = ["application-state", "db", "atomicity"]
include = ["src", "Cargo.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4"
arrayref = "0.3"
fxhash = "0.2"
